--- a/website/docs/cli/commands/index.mdx
+++ b/website/docs/cli/commands/index.mdx
@@ -57,7 +57,7 @@ All other commands:
 Global options (use these before the subcommand, if any):
   -chdir=DIR    Switch to a different working directory before executing the
                 given subcommand.
-  -help         Show this help output, or the help for a specified subcommand.
+  -help         Show this help output or the help for a specified subcommand.
   -version      An alias for the "version" subcommand.
 ```
 
@@ -68,7 +68,7 @@ To get specific help for any specific command, use the `-help` option with the
 relevant subcommand. For example, to see help about the "validate" subcommand
 you can run `terraform validate -help`.
 
-The inline help built in to Terraform CLI describes the most important
+The inline help built into Terraform CLI describes the most important
 characteristics of each command. For more detailed information, refer to each
 command's page for details.
 
