--- a/website/docs/cli/commands/index.mdx
+++ b/website/docs/cli/commands/index.mdx
@@ -130,7 +130,7 @@ terraform -uninstall-autocomplete
 
 The Terraform CLI commands interact with the HashiCorp service
 [Checkpoint](https://checkpoint.hashicorp.com/) to check for the availability
-of new versions and for critical security bulletins about the current version.
+of new versions and critical security bulletins about the current version.
 
 One place where the effect of this can be seen is in `terraform version`, where
 it is used by default to indicate in the output when a newer version is
